Categories Already in use! :D

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -18,18 +18,28 @@
   padding: 0;
   margin: 0;
   font-family: "Work Sans";
+  
+}
+.main{
+  display: flex;
+  background-color: #306fcd;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 .container {
   display: flex;
-  height: 100vh;
-  justify-content: center;
+  height: 70vh;
+  width: 100vw;
+  justify-content: space-around;
   align-items: center;
-  flex-direction: column;
   position: relative;
-  background-color: #306fcd;
+  background-color: inherit;
+
 }
 .todo {
-  position: absolute;
+  
   width: 400px;
   background-color: #f4f3f4;
   height: 400px;
@@ -37,7 +47,6 @@
 .todo-body {
   position: relative;
   height: 300px;
-  /* padding: 0 40px 0 40px; */
   overflow: auto;
   display: flex;
   flex-direction: column;
