--- a/src/TodoHeader/TodoHeader.css
+++ b/src/TodoHeader/TodoHeader.css
@@ -1,15 +1,22 @@
 .todo-heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 25px 0 25px;
-    background-color: #e0e0e0;
-    height: 100px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 25px 0 25px;
+  background-color: #e0e0e0;
+  height: 100px;
+}
+.todo-heading-text {
+  color: #383737;
+}
+.todo-heading-count {
+  color: #696969;
+}
+@media (max-width: 481px) {
   .todo-heading-text {
-    color: #383737;
-  }
-  .todo-heading-count {
-    color: #696969;
-  }
- 
+    font-size: 1.3em;
+}
+.todo-heading-count {
+  font-size: 0.9em;
+}
+}
