--- a/src/Categories/Categories.css
+++ b/src/Categories/Categories.css
@@ -3,6 +3,8 @@
   height: 200px;
   position: relative;
   text-align: left;
+  display: flex;
+  flex-direction: column;
 }
 .category h2 {
   padding-left: 20px;
@@ -14,7 +16,6 @@
   align-items: center;
   padding: 0 20px 0 20px;
   justify-content: space-evenly;
-  position: absolute;
   bottom: 0;
 }
 .category-input {
@@ -38,21 +39,23 @@
   cursor: pointer;
   outline: none;
 }
-.category-div {
+.categories {
   padding: 10px 0 0 25px;
   font-size: 17px;
+  flex: 1;
+  width: 100%;
 }
-.category-div li {
+.categories li {
   list-style: circle;
-  /* color: rgba(255, 255, 255, 0.685); */
+  color: white;
 }
-.category-div li span {
-    /* color: rgba(255, 255, 255, 0.685); */
+.categories li span {
+  color: rgba(255, 255, 255, 0.57);
 
   font-weight: 500;
   cursor: pointer;
   transition: 0.3s;
 }
-.category-div li span:hover {
-  color: rgba(255, 255, 255, 0.57);
+.categories li span:hover {
+  color: white;
 }
