--- a/src/SearchTask/SearchTask.css
+++ b/src/SearchTask/SearchTask.css
@@ -1,12 +1,13 @@
 .searching-background{
     display: flex;
     z-index: 4444;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color:rgba(255, 255, 255, 0.567);
     justify-content: center;
     align-items: center;
     transition: 1s;
+    position: absolute;
   }
   .search-box{
     display: flex;
