--- a/src/TodoForm/TodoForm.css
+++ b/src/TodoForm/TodoForm.css
@@ -29,3 +29,11 @@
   outline: none;
   margin-bottom: 7px;
 }
+@media (max-width: 481px){
+  .todo-input {
+  
+    width: 200px;
+   
+    
+  }
+}
