--- a/src/App/App.css
+++ b/src/App/App.css
@@ -13,34 +13,35 @@
   background: #555;
 }
 
-* {
+body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Work Sans";
-  
+  background-color: #306fcd;
 }
 .main{
   display: flex;
   background-color: #306fcd;
   width: 100vw;
-  height: 200vh;
-  align-items: center;
+  height: 100vh;
   justify-content: center;
+  position: relative;
+  
 }
 .container {
+  margin-top: 100px;
   display: flex;
   height: 70vh;
   width: 100vw;
   justify-content: space-around;
   align-items: center;
-  position: relative;
+  position: absolute;
   background-color: inherit;
 
 }
 .todo {
-  
-  width: 400px;
+  width: 410px;
   background-color: #f4f3f4;
   height: 400px;
 }
@@ -55,7 +56,9 @@
 .todo-tasks {
   flex: 1;
 }
-
+input{
+  font-family: "Work Sans";
+}
 @media (max-width: 761px){
   .container {
     flex-direction: column;
@@ -64,8 +67,8 @@
 }
 @media (max-width: 481px){
   .todo {
-  
-    width: 300px;
+    
+    width: 320px;
     background-color: #f4f3f4;
     height: 400px;
   }
