--- a/src/TodoForm/TodoForm.css
+++ b/src/TodoForm/TodoForm.css
@@ -9,7 +9,7 @@
   border: none;
   margin: 20px 0px 30px 10px;
   width: 300px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.674);
   padding-bottom: 4px;
   font-size: 20px;
   outline: none;
